Tried to fix some contrast issues.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,7 +5,7 @@
 :root {
     --primary-color: rgb(255, 190, 10);
     --secondary-color: #FB5607;
-    --accent1-color: #FF006E;
+    --accent1-color: #8c003d;
     --accent2-color: #8338EC;
 }
 
@@ -81,6 +81,7 @@ h6 {
 
 h2 {
     padding-top: 1rem;
+    font-size: 2rem;
 }
 
 footer {
@@ -92,6 +93,8 @@ footer {
 
 footer p {
     padding-left: 15rem;
+    color: white;
+    font-weight: bold;
 }
 
 footer a {
@@ -137,7 +140,12 @@ figcaption {
     top: 20px;
     text-align: center;
     width: 100%;
-    color: whitesmoke;
+    color: #fff;
+    text-shadow:
+      3px 3px 0 var(--accent1-color),
+      -3px 3px 0 var(--accent1-color),
+      -3px -3px 0 var(--accent1-color),
+      3px -3px 0 var(--accent1-color);
     font-size: 4rem;
 }
 
@@ -145,8 +153,8 @@ figcaption {
 
     position: absolute;
     max-width: 40%;
-    color: whitesmoke;
-    font-size: 1rem;
+    color: var(--accent1-color);
+    font-size: 1.2rem;
     right: 80px;
     bottom: 20px;
 }
@@ -287,16 +295,19 @@ fieldset {
 button {
     margin: 1rem;
     background-color: var(--secondary-color);
-    color: #fff;
+    color: black;
+    font-size: 4rem;
     border: none;
     border-radius: .5rem;
     padding: .75rem;
     font-size: 1.2rem;
+    font-weight: bold;
     width: 200px;
 }
 
 button:hover {
     background-color: var(--accent1-color);
+    color: #fff;
 }
 
 label {
